syntax = "proto3";

package common;

import "google/protobuf/any.proto";

option go_package = "github.com/cuit9622/dms/common/pb";

message PageRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message PageResult{
  int64 total = 1;
  google.protobuf.Any data = 2;
}