syntax = "proto3";

package dorm;

import "google/protobuf/wrappers.proto";
import "common.proto";
import "dorm_bed.proto";

option go_package = "github.com/cuit9622/dms/common/pb";

message Dorm{
  int64 id = 1;
  string name = 2;
  int32 size = 3;
  int32 floor = 4;
  int64 dormBuildingID = 5;
  repeated dormBed.DormBed dormBeds = 6;
}

message Dorms{
  repeated Dorm dorms = 1;
}

message DormGetRequest{
  int64 dormBuildingID = 1;
  int32 floor = 2;
  common.PageRequest page = 3;
}

service DormService {
  rpc Get(DormGetRequest) returns (common.PageResult) {}
  rpc Update(Dorm) returns (google.protobuf.Int32Value) {}
  rpc Delete(google.protobuf.Int64Value) returns (google.protobuf.Int32Value) {}
}
